Fix filter bar z-index

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -16,6 +16,8 @@
     /* Firefox */
     -ms-overflow-style: none;
     /* IE 10+ */
+    position: relative;
+    z-index: 50;
 }
 
 .filter-bar::-webkit-scrollbar {
